# rahul-workspace

./: .gitignore
folder-structure/: Makefile
folder-structure/cache-filter/: Cargo.toml
folder-structure/singleton-service/: Cargo.toml
folder-structure/singleton-service/src/: lib.rs
folder-structure/threescale/: Cargo.toml
folder-structure/threescale/src/: lib.rs
message-queue-poc/: README.md  docker-compose.yaml
message-queue-poc/bench-data/: enqueue_bench.csv
message-queue-poc/cache-filter/: Cargo.toml  Makefile
message-queue-poc/cache-filter/src/: lib.rs
message-queue-poc/envoy/: Dockerfile  envoy.yaml
message-queue-poc/singleton-service/: Cargo.toml  Makefile
message-queue-poc/singleton-service/src/: lib.rs
unique-requests-poc/: .gitignore  Makefile  docker-compose.yaml
unique-requests-poc/envoy/: Dockerfile  docker-compose.yaml  envoy.yaml
unique-requests-poc/envoy/management-service/: Dockerfile  index.js  package.json
unique-requests-poc/filter/: Cargo.toml
unique-requests-poc/filter/src/: lib.rs
