[package]
name = "unique-filter"
version = "0.1.0"
authors = ["Rahul Anand <rahulanand16nov@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.13"
proxy-wasm = "0.1.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.63"
bincode = "1.0"
